eks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "a4c05db5f58ab4374bd22499480e3cbe-1047310997.ap-southeast-1.elb.amazonaws.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: simple-bank-api-service
                port:
                  number: 80
